--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,9 @@ orbs:
         parameters:
           markdown_link_check_config_json:
             default: "{}"
-            description: Config JSON passed to markdown-link-check package (see https://www.npmjs.com/package/markdown-link-check for full details)
+            description: |
+              Config JSON passed to markdown-link-check package (see https://www.npmjs.com/package/markdown-link-check for full details)
+              NOTE: Double quotes will need to be escaped, e.g. {\\\"myThing\\\": \\\"Something\\\"}
             type: string
         steps:
           - checkout
@@ -99,18 +101,18 @@ workflows:
       - kurtosis-docs-checker/check_docs:
           markdown_link_check_config_json: |
             {
-                "replacementPatterns": [
+                \\\"replacementPatterns\\\": [
                     {
-                        "pattern": "^../kurtosis-core",
-                        "replacement": "https://docs.kurtosistech.com/kurtosis-core"
+                        \\\"pattern\\\": \\\"^../kurtosis-core\\\",
+                        \\\"replacement\\\": \\\"https://docs.kurtosistech.com/kurtosis-core\\\"
                     },
                     {
-                        "pattern": "^../kurtosis-libs",
-                        "replacement": "https://docs.kurtosistech.com/kurtosis-libs"
+                        \\\"pattern\\\": \\\"^../kurtosis-libs\\\",
+                        \\\"replacement\\\": \\\"https://docs.kurtosistech.com/kurtosis-libs\\\"
                     },
                     {
-                        "pattern": "^../kurtosis-testsuite-api-lib",
-                        "replacement": "https://docs.kurtosistech.com/kurtosis-testsuite-api-lib"
+                        \\\"pattern\\\": \\\"^../kurtosis-testsuite-api-lib\\\",
+                        \\\"replacement\\\": \\\"https://docs.kurtosistech.com/kurtosis-testsuite-api-lib\\\"
                     }
                 ]
             }
