--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ orbs:
             default: "{}"
             description: |
               Config JSON passed to markdown-link-check package (see https://www.npmjs.com/package/markdown-link-check for full details)
-              NOTE: Double quotes will need to be escaped, e.g. {\\\"myThing\\\": \\\"Something\\\"}
+              NOTE: Double quotes will need to be escaped, e.g. {\"myThing\": \"Something\"}
             type: string
         steps:
           - checkout
@@ -101,18 +101,18 @@ workflows:
       - kurtosis-docs-checker/check_docs:
           markdown_link_check_config_json: |
             {
-                \\\"replacementPatterns\\\": [
+                \"replacementPatterns\": [
                     {
-                        \\\"pattern\\\": \\\"^../kurtosis-core\\\",
-                        \\\"replacement\\\": \\\"https://docs.kurtosistech.com/kurtosis-core\\\"
+                        \"pattern\": \"^../kurtosis-core\",
+                        \"replacement\": \"https://docs.kurtosistech.com/kurtosis-core\"
                     },
                     {
-                        \\\"pattern\\\": \\\"^../kurtosis-libs\\\",
-                        \\\"replacement\\\": \\\"https://docs.kurtosistech.com/kurtosis-libs\\\"
+                        \"pattern\": \"^../kurtosis-libs\",
+                        \"replacement\": \"https://docs.kurtosistech.com/kurtosis-libs\"
                     },
                     {
-                        \\\"pattern\\\": \\\"^../kurtosis-testsuite-api-lib\\\",
-                        \\\"replacement\\\": \\\"https://docs.kurtosistech.com/kurtosis-testsuite-api-lib\\\"
+                        \"pattern\": \"^../kurtosis-testsuite-api-lib\",
+                        \"replacement\": \"https://docs.kurtosistech.com/kurtosis-testsuite-api-lib\"
                     }
                 ]
             }
