--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -124,23 +124,21 @@ workflows:
               ignore:
                 - develop
                 - master
-      # TODO UNCOMMENT SOON
-      # - check_typescript:
-      #     filters:
-      #       branches:
-      #         ignore:
-      #           - develop
-      #           - master
+      - check_typescript:
+          filters:
+            branches:
+              ignore:
+                - develop
+                - master
       # -- End PR check jobs ---------------------------------------
 
       # -- Artifact-publishing jobs --------------------------------
-      # TODO UNCOMMENT SOON
-      # - publish_typescript:
-      #     context:
-      #       - npmjs-user
-      #     filters:
-      #       branches:
-      #         ignore: /.*/
-      #       tags:
-      #         only: /^[0-9]+\.[0-9]+\.[0-9]+$/
+      - publish_typescript:
+          context:
+            - npmjs-user
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^[0-9]+\.[0-9]+\.[0-9]+$/
       # -- End artifact-publishing jobs ----------------------------
