--- a/typescript/package.json
+++ b/typescript/package.json
@@ -1,7 +1,7 @@
 {
     "name": "minimal-grpc-server",
     "version": "0.2.1",
-    "description": "This repo contains a tiny Typescript library wrapped around the grpc server, to make starting a grpc server much simpler.",
+    "description": "This repo contains a tiny Typescript library wrapped around Google's gRPC server, to make starting a gRPC server much simpler.",
     "main": "./build/index",
     "types": "./build/index",
     "scripts": {
@@ -28,5 +28,16 @@
     "homepage": "https://github.com/kurtosis-tech/minimal-grpc-server",
     "engines": {
         "node": "= 14.17.1"
+    },
+    "dependencies": {
+        "grpc": "^1.24.11",
+        "loglevel": "^1.7.1",
+        "neverthrow": "^4.2.2"
+    },
+    "devDependencies": {
+        "chai": "^4.3.4",
+        "mocha": "^9.1.0",
+        "ts-mocha": "^8.0.0",
+        "typescript": "^4.3.5"
     }
 }
