--- a/typescript/package.json
+++ b/typescript/package.json
@@ -27,7 +27,7 @@
     },
     "homepage": "https://github.com/kurtosis-tech/minimal-grpc-server",
     "engines": {
-        "node": "= 14.17.1"
+        "node": ">=14.17.0"
     },
     "dependencies": {
         "grpc": "^1.24.11",
