--- a/typescript/package.json
+++ b/typescript/package.json
@@ -30,11 +30,12 @@
         "node": ">=16.13.0"
     },
     "dependencies": {
-        "grpc": "^1.24.11",
+        "@grpc/grpc-js": "^1.4.4",
         "loglevel": "^1.7.1",
         "neverthrow": "^4.2.2"
     },
     "devDependencies": {
+        "@types/mocha": "^9.0.0",
         "mocha": "^9.1.0",
         "ts-mocha": "^8.0.0",
         "typescript": "^4.3.5"
